Allow admin to delete all current checkins

--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -32,6 +32,6 @@
 
 <div id="checkin_completion">
 	<p>Everyone has checked in.</p>
-	<a id="reset_checkins" style="cursor: pointer; color: blue;">Reset count</a>
+	<p id="reset_checkins"><%= link_to "Reset check-ins", pages_reset_checkins_path, :remote => true %></p>
 </div>
 
