--- a/app/views/pages/undo_checkin.js.erb
+++ b/app/views/pages/undo_checkin.js.erb
@@ -1,1 +1,2 @@
-$('#undo_confirmation').show().fadeOut(2000);
+$('#undo_checkin_link').hide();
+$('#checkin_info').html("<p>You have not checked in.</p>");
